--- a/test/index.html
+++ b/test/index.html
@@ -8,5 +8,8 @@
         <button id="take">Take</button>
         <button id="tracks">Tracks</button>
         <button id="stop">Stop</button>
+
+        <input type="file" id="file" multiple>
+        <input type="date" id="date">
     </body>
 </html>
