--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body>
-        <!-- <canvas id="canvas" style="display: none"></canvas> -->
+        <!-- camera test -->
         <img id="image">
         <video id="video" autoplay></video>
         <button id="take">Take</button>
@@ -11,5 +11,9 @@
 
         <input type="file" id="file" multiple>
         <input type="date" id="date">
+
+
+        <!-- media element test -->
+        <audio controls src="https://interactive-examples.mdn.mozilla.net/media/examples/t-rex-roar.mp3">
     </body>
 </html>
