--- a/static/index.html
+++ b/static/index.html
@@ -15,5 +15,7 @@
 
         <!-- media element test -->
         <audio controls src="https://interactive-examples.mdn.mozilla.net/media/examples/t-rex-roar.mp3">
+
+        <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
