canvas toBlob is optional

--- a/static/rtc/dc/basic/index.html
+++ b/static/rtc/dc/basic/index.html
@@ -67,8 +67,9 @@
        title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
 </div>
 
+
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-<script src="/rtc-dc-basic.js" async></script>
+<script src="/rtc-dc-basic.js"></script>
 
 <!-- <script src="../../../js/lib/ga.js"></script> -->
 
