--- a/static/index.html
+++ b/static/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
     </head>
@@ -14,7 +15,7 @@
 
 
         <!-- media element test -->
-        <audio controls src="https://interactive-examples.mdn.mozilla.net/media/examples/t-rex-roar.mp3">
+        <audio controls src="https://interactive-examples.mdn.mozilla.net/media/examples/t-rex-roar.mp3"></audio>
 
         <script type="text/javascript" src="main.js"></script>
     </body>
