--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
 
         <!-- media element test -->
         <audio controls src="https://interactive-examples.mdn.mozilla.net/media/examples/t-rex-roar.mp3"></audio>
+        <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 
         <script type="text/javascript" src="main.js"></script>
     </body>
