--- a/static/rtc1.html
+++ b/static/rtc1.html
@@ -15,6 +15,8 @@
         Bob<br>
         <video id="bob1"></video>
         <video id="bob2"></video>
+        <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+
         <script type="text/javascript" src="rtc.js"></script>
     </body>
 </html>
